RESOLVED FIXED173464
REGRESSION(r218253): Infinite animated gifs no longer loop
https://bugs.webkit.org/show_bug.cgi?id=173464
Summary REGRESSION(r218253): Infinite animated gifs no longer loop
Carlos Garcia Campos
Reported 2017-06-16 02:48:20 PDT
Even with bug #173403 fixed, we still see that infinite gifs only play once. Now the repetition counts is correctly used, but after the first loop iteration we keep rendering the same frame all the time, so it looks like if the animation stopped. This is because in r218253 we changed to use SharedBuffer instead of a Vector in ImageBackingStore, but we are not correctly copying the data in the copy constructor. We are using SharedBuffer::copy() that doesn't actually copy the data of the segments. I'm not sure if that's on purpose or a regression of bug #170956.
Attachments
Patch (1.84 KB, patch)
2017-06-16 02:51 PDT, Carlos Garcia Campos
clopez: review+
cgarcia: commit-queue-
Carlos Garcia Campos
Comment 1 2017-06-16 02:51:10 PDT
Carlos Alberto Lopez Perez
Comment 2 2017-06-16 06:16:54 PDT
Comment on attachment 313067 [details] Patch Maybe is a good idea to create some test for this?
Carlos Garcia Campos
Comment 3 2017-06-16 06:26:54 PDT
Comment on attachment 313067 [details] Patch Thanks for the review, let's not push this for now, because I'm still not sure if it's a bug in SharedBuffer::copy(). I'll check existing tests to see if we can add a test for this too.
Michael Catanzaro
Comment 4 2017-06-16 07:15:45 PDT
Does this fix imgur gifs? We have another bug for that....
Carlos Garcia Campos
Comment 5 2017-06-16 07:19:10 PDT
What other bug? This is a very recent regression anyway, so maybe imgur is fixed by bug #173403.
Michael Catanzaro
Comment 6 2017-06-16 07:25:11 PDT
Bug #161963. I guess it's unrelated. There's also bug #109395 which is also quite bad.
Carlos Garcia Campos
Comment 7 2017-06-18 22:23:06 PDT
Note You need to log in before you can comment on or make changes to this bug.